--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "eventlistner",
+  "description": "A app for oragnisation to list there upcoming events and for the users to register for those events, so that they can attend some exciting events.",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,13 +10,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~46.0.7",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "^0.14.4",
     "react": "18.0.0",
-    "react-native": "0.69.4"
+    "react-native": "0.69.4",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "^4.3.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/styled-components-react-native": "^5.1.3"
   },
   "private": true
 }
